--- a/index.html
+++ b/index.html
@@ -24,19 +24,68 @@
 
 <body>
     <main>
-        <div class="container">
-            <div class="wrapper bg-light">
-                <div class="row text-center">
-                    <div class="col-12">
+        <div class="container p-5">
+            <div class="wrapper bg-light p-5">
+                <section id="price-calc" class="mb-5">
+
+                    <div class="row text-center mb-3">
+                        <div class="col-12">
+                            <h3 class="text-uppercase">calcola il prezzo del tuo biglietto</h3>
+                        </div>
+                    </div>
+
+                    <div class="row py-4 bg-white shadow bg-body rounded justify-content-center">
+                        <div class="col-3 text-center">
+                            <label for="input-name" class="form-label">Nome Cognome</label>
+                            <input type="text" id="input-name" class="form-control">
+                        </div>
+                        <div class="col-3 text-center mx-5">
+                            <label for="input-km" class="form-label">km da percorrere</label>
+                            <input type="text" id="input-km" class="form-control">
+                        </div>
+                        <div class="col-3 text-center">
+                            <label for="input-select" class="form-label">Fascia d'età</label>
+                            <select class="form-select" id="imput-select">
+                                <option selected>Maggiorenne</option>
+                                <option value="1">Minorenne</option>
+                                <option value="2">Over 65</option>
+                            </select>
+                        </div>
+                        <div class="col-12 text-center">genera</div>
+                    </div>
+
+                </section>
+
+                <section id="ticket">
+
+                    <div class="row text-center mb-3">
+                        <div class="col-12">
+                            <h3 class="text-uppercase">calcola il prezzo del tuo biglietto</h3>
+                        </div>
+                    </div>
+
+                    <div class="row p-4 bg-white shadow bg-body rounded">
+                        <div class="col-12 p-0 text-uppercase">passeggero</div>
+                        <div class="col-4 bg-secondary">nome</div>
+                        <div class="col-8">
+                            <div class="row">
+                                <div class="col-3">offerta</div>
+                                <div class="col-3">carrozza</div>
+                                <div class="col-3">codice cp</div>
+                                <div class="col-3">costo biglietto</div>
+                            </div>
+                        </div>
 
                     </div>
-                </div>
+
+                </section>
+
 
             </div>
         </div>
 
 
-        
+
     </main>
     <!-- custom javascript -->
     <script src="js/script.js"></script>
