--- a/index.html
+++ b/index.html
@@ -51,7 +51,10 @@
                                 <option value="2">Over 65</option>
                             </select>
                         </div>
-                        <div class="col-12 text-center">genera</div>
+                        <div class="col-12 text-center pt-5">
+                            <button id="btn-genera" type="button" class="btn btn-primary me-4">Genera</button>
+                            <button id="btn-annulla" type="button" class="btn btn-primary">Annulla</button>
+                        </div>
                     </div>
 
                 </section>
@@ -60,19 +63,36 @@
 
                     <div class="row text-center mb-3">
                         <div class="col-12">
-                            <h3 class="text-uppercase">calcola il prezzo del tuo biglietto</h3>
+                            <h3 class="text-uppercase">il tuo biglietto</h3>
                         </div>
                     </div>
 
                     <div class="row p-4 bg-white shadow bg-body rounded">
-                        <div class="col-12 p-0 text-uppercase">passeggero</div>
-                        <div class="col-4 bg-secondary">nome</div>
-                        <div class="col-8">
+                        <div class="col-12 p-0 text-uppercase">
+                            <h5>dettaglio passegeri</h5>
+                        </div>
+                        <div class="col-3 bg-secondary p-3">
+                            <h4 class="text-uppercase">nome passegero</h4>
+                            <p id="name-passenger"></p>
+                        </div>
+                        <div class="col-9 p-3">
                             <div class="row">
-                                <div class="col-3">offerta</div>
-                                <div class="col-3">carrozza</div>
-                                <div class="col-3">codice cp</div>
-                                <div class="col-3">costo biglietto</div>
+                                <div class="col-3">
+                                    <h5 class="mb-5">Offerta</h5>
+                                    <p id="ticket-type"></p>
+                                </div>
+                                <div class="col-3">
+                                    <h5 class="mb-5">Carrozza</h5>
+                                    <p id="carriage"></p>
+                                </div>
+                                <div class="col-3">
+                                    <h5 class="mb-5">Codice CP</h5>
+                                    <p id="cp-code"></p>
+                                </div>
+                                <div class="col-3">
+                                    <h5 class="mb-5">Costo Biglietto</h5>
+                                    <p id="ticket-price"></p>
+                                </div>
                             </div>
                         </div>
 
