--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                         </div>
                         <div class="col-3 text-center mx-5">
                             <label for="input-km" class="form-label">km da percorrere</label>
-                            <input type="text" id="input-km" class="form-control" required>
+                            <input type="number" id="input-km" class="form-control" required>
                         </div>
                         <div class="col-3 text-center">
                             <label for="input-select" class="form-label">Fascia d'età</label>
